# LOB

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: rust.yml
proto/: limit_order_book.proto
src/: lib.rs  ops.rs  price_and_quantity.rs
src/asks/: deserialize.rs  mod.rs
src/bids/: deserializer.rs  mod.rs
src/limit_order_book/: deserialize.rs  event.rs  mod.rs
