[package]
name = "lob"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", optional = true, features = ["derive"] }
serde_json = "1.0.96"
prost = { version = "*", optional = true }
tonic = { version = "*", optional = true }

[features]
default = ["serde", "grpc"]
grpc = ["prost", "tonic"]
event = []
event-id = ["event"]
event-symbol = ["event"]
event-time = ["event"]


[build-dependencies]
tonic-build = "*"
